--- a/css/styles copy.css
+++ b/css/styles copy.css
@@ -27,7 +27,7 @@ a {
 } */
 
 /* footer {
-  background-color: #4a5841;
+  background-color: $background-color-green;
   width: 100vw;
   display: flex;
   flex-direction: row;
@@ -47,7 +47,7 @@ a {
 } */
 
 /* .title {
-  color: #4a5841;
+  color: $background-color-green;
   text-align: center;
   padding: 3rem;
 } */
@@ -78,7 +78,7 @@ main {
 } */
 
 /* .header-navbar {
-  background-color: #4a5841;
+  background-color: $background-color-green;
   list-style: none;
   color: rgb(175, 170, 144);
   padding: 1rem 0rem;
