--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,9 @@ footer {
   color: #afaa90;
   list-style: none; }
 
+input[type="text"] {
+  background-color: #9f9a7e; }
+
 body {
   width: 100%;
   height: 100%; }
@@ -97,7 +100,8 @@ a {
 /*section-1*/
 main {
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  overflow: overlay; }
 
 .header-navbar {
   background-color: #4a5841;
@@ -118,24 +122,24 @@ main {
   background-repeat: no-repeat; }
 
 .title {
-  color: #4a5841;
+  color: #44523c;
   text-align: center;
   font-size: 2rem;
   font-weight: 400;
   padding-top: 7rem;
   line-height: 3rem; }
 
-.section-2 {
-  background-color: #9f9a7e;
-  width: 100%; }
-
 /*section-2*/
 .section-2 {
-  padding: 2rem 2.5rem;
+  background-color: #9f9a7e;
+  width: 100%;
   color: #44523c; }
 
 .section-2 h1 {
   color: #44523c; }
+
+.pic-mix-2-padding {
+  padding-right: 10rem !important; }
 
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48; }
@@ -152,6 +156,25 @@ main {
   width: 100%;
   height: 100%;
   object-fit: cover; }
+
+/*main section2 grid*/
+.grid-section-2 {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 1rem 4rem;
+  gap: 2rem; }
+
+.grid-section-2-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; }
+
+/*cards section2*/
+.cards-section-2 {
+  display: flex;
+  gap: 2rem;
+  justify-content: center; }
 
 @media only screen and (max-width: 320px) {
   .grid-img-plants {
@@ -184,8 +207,22 @@ main {
     font-size: 1.5rem;
     line-height: 1.5rem; } }
 
-.img-animation {
-  transition: transform 0.3s; }
+.card-color {
+  background-color: #4a5841;
+  color: #afaa90; }
 
-.img-animation:hover {
-  transform: scale(0.9); }
+/*contact form*/
+input[type="text"] {
+  background-color: #afaa90; }
+
+input[type="email"] {
+  background-color: #afaa90; }
+
+textarea[type="text"] {
+  background-color: #afaa90; }
+
+.btn-background {
+  background-color: pink; }
+
+.button-color {
+  color: #afaa90 !important; }
