--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -10,7 +10,7 @@ a {
 }
 
 .title {
-  color: #4a5841;
+  color: $background-color-green;
   text-align: center;
   font-size: 3rem;
   font-weight: 400;
