--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -30,7 +30,7 @@ nav h1 {
 }
 
 .header-navbar {
-  // background-color: #4a5841;
+  // background-color: $background-color-green;
   background-color: $background-color-green;
   list-style: none;
   color: rgb(175, 170, 144);
