--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  background-color: #4a5841;
+  background-color: $background-color-green;
   width: 100vw;
   display: flex;
   flex-direction: row;
@@ -10,6 +10,10 @@ footer {
 }
 
 .footer-links {
-  color: rgb(175, 170, 144);
+  color: $font-color-beige;
   list-style: none;
+}
+
+input[type="text"] {
+  background-color: rgb(159, 154, 126);
 }
