--- a/scss/layout/_grids.scss
+++ b/scss/layout/_grids.scss
@@ -12,3 +12,26 @@
   height: 100%;
   object-fit: cover;
 }
+
+/*main section2 grid*/
+
+.grid-section-2 {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 1rem 4rem;
+  gap: 2rem;
+}
+
+.grid-section-2-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/*cards section2*/
+.cards-section-2 {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+}
