--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,4 +8,5 @@
 @import "./layout/main";
 @import "./layout/grids";
 @import "./layout/media";
-@import "./transitions/global-transitions";
+@import "./layout/cards";
+@import "./layout/contactForm";
