--- a/scss/layout/_grids.scss
+++ b/scss/layout/_grids.scss
@@ -16,11 +16,11 @@
 /*main section2 grid*/
 
 .grid-section-2 {
-  display: grid;
+  // display: grid;
   width: 100%;
-  grid-template-columns: repeat(4, 1fr);
+  // grid-template-columns: repeat(4, 1fr);
   padding: 1rem 4rem;
-  gap: 2rem;
+  // gap: 2rem;
 }
 
 .grid-section-2-img {
