--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,3 +10,5 @@
 @import "./layout/media";
 @import "./layout/cards";
 @import "./layout/contactForm";
+@import "./layout/main-care";
+@import "./custom-bootstrap-overrides.scss";
